y.output
   0  $accept : file $end

   1  file : seq
   2       |

   3  seq : declaracao
   4      | seq declaracao

   5  declaracao : pub const type ptr ID ';'
   6             | pub const type ptr ID ini ';'
   7             | pub const type ptr ID '(' params ')' bodys ';'
   8             | pub const type ptr ID '(' ')' body ';'
   9             | pub const type ptr ID '(' ')' ';'
  10             | error ';'

  11  bodys :
  12        | body

  13  ptr :
  14      | '*'

  15  const :
  16        | CONST

  17  pub :
  18      | PUBLIC

  19  type : VOID
  20       | INTEGER
  21       | STRING
  22       | NUMBER

  23  ini : ASSIGN INT
  24      | ASSIGN '-' INT
  25      | ASSIGN const STR
  26      | ASSIGN REAL
  27      | ASSIGN '-' REAL
  28      | ASSIGN ID

  29  params : params ',' param
  30         | param

  31  param : type ptr ID

  32  args : param ';'
  33       | args param ';'

  34  body : '{' '}'
  35       | '{' args '}'
  36       | '{' instrs '}'
  37       | '{' args instrs '}'

  38  instrs : instr
  39         | instrs instr

  40  instr : IF expr THEN instr
  41        | IF expr THEN instr ELSE instr
  42        | DO instr WHILE expr ';'
  43        | FOR leftvalue IN expr updw expr step DO instr
  44        | expr ';'
  45        | body
  46        | BREAK INT ';'
  47        | CONTINUE INT ';'
  48        | BREAK ';'
  49        | CONTINUE ';'
  50        | leftvalue '#' expr ';'
  51        | error ';'

  52  updw : UPTO
  53       | DOWNTO

  54  step :
  55       | STEP expr

  56  exprs : exprs ',' expr
  57        | expr

  58  expr : INT
  59       | REAL
  60       | STR
  61       | leftvalue
  62       | ID '(' exprs ')'
  63       | ID '(' ')'
  64       | '(' expr ')'
  65       | leftvalue ASSIGN expr
  66       | DEC leftvalue
  67       | INC leftvalue
  68       | leftvalue INC
  69       | leftvalue DEC
  70       | expr '*' expr
  71       | expr '/' expr
  72       | expr '%' expr
  73       | expr '+' expr
  74       | expr '-' expr
  75       | expr EQ expr
  76       | expr NE expr
  77       | expr GE expr
  78       | expr LE expr
  79       | expr '>' expr
  80       | expr '<' expr
  81       | expr '&' expr
  82       | expr '|' expr
  83       | expr '!'
  84       | '-' expr

  85  leftvalue : ID
  86            | ID '[' expr ']'

state 0
	$accept : . file $end  (0)
	file : .  (2)
	pub : .  (17)

	error  shift 1
	PUBLIC  shift 2
	$end  reduce 2
	VOID  reduce 17
	INTEGER  reduce 17
	STRING  reduce 17
	NUMBER  reduce 17
	CONST  reduce 17

	file  goto 3
	seq  goto 4
	declaracao  goto 5
	pub  goto 6


state 1
	declaracao : error . ';'  (10)

	';'  shift 7
	.  error


state 2
	pub : PUBLIC .  (18)

	.  reduce 18


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	file : seq .  (1)
	seq : seq . declaracao  (4)
	pub : .  (17)

	error  shift 1
	PUBLIC  shift 2
	$end  reduce 1
	VOID  reduce 17
	INTEGER  reduce 17
	STRING  reduce 17
	NUMBER  reduce 17
	CONST  reduce 17

	declaracao  goto 8
	pub  goto 6


state 5
	seq : declaracao .  (3)

	.  reduce 3


state 6
	declaracao : pub . const type ptr ID ';'  (5)
	declaracao : pub . const type ptr ID ini ';'  (6)
	declaracao : pub . const type ptr ID '(' params ')' bodys ';'  (7)
	declaracao : pub . const type ptr ID '(' ')' body ';'  (8)
	declaracao : pub . const type ptr ID '(' ')' ';'  (9)
	const : .  (15)

	CONST  shift 9
	VOID  reduce 15
	INTEGER  reduce 15
	STRING  reduce 15
	NUMBER  reduce 15

	const  goto 10


state 7
	declaracao : error ';' .  (10)

	.  reduce 10


state 8
	seq : seq declaracao .  (4)

	.  reduce 4


state 9
	const : CONST .  (16)

	.  reduce 16


state 10
	declaracao : pub const . type ptr ID ';'  (5)
	declaracao : pub const . type ptr ID ini ';'  (6)
	declaracao : pub const . type ptr ID '(' params ')' bodys ';'  (7)
	declaracao : pub const . type ptr ID '(' ')' body ';'  (8)
	declaracao : pub const . type ptr ID '(' ')' ';'  (9)

	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	.  error

	type  goto 15


state 11
	type : VOID .  (19)

	.  reduce 19


state 12
	type : INTEGER .  (20)

	.  reduce 20


state 13
	type : STRING .  (21)

	.  reduce 21


state 14
	type : NUMBER .  (22)

	.  reduce 22


state 15
	declaracao : pub const type . ptr ID ';'  (5)
	declaracao : pub const type . ptr ID ini ';'  (6)
	declaracao : pub const type . ptr ID '(' params ')' bodys ';'  (7)
	declaracao : pub const type . ptr ID '(' ')' body ';'  (8)
	declaracao : pub const type . ptr ID '(' ')' ';'  (9)
	ptr : .  (13)

	'*'  shift 16
	ID  reduce 13

	ptr  goto 17


state 16
	ptr : '*' .  (14)

	.  reduce 14


state 17
	declaracao : pub const type ptr . ID ';'  (5)
	declaracao : pub const type ptr . ID ini ';'  (6)
	declaracao : pub const type ptr . ID '(' params ')' bodys ';'  (7)
	declaracao : pub const type ptr . ID '(' ')' body ';'  (8)
	declaracao : pub const type ptr . ID '(' ')' ';'  (9)

	ID  shift 18
	.  error


state 18
	declaracao : pub const type ptr ID . ';'  (5)
	declaracao : pub const type ptr ID . ini ';'  (6)
	declaracao : pub const type ptr ID . '(' params ')' bodys ';'  (7)
	declaracao : pub const type ptr ID . '(' ')' body ';'  (8)
	declaracao : pub const type ptr ID . '(' ')' ';'  (9)

	ASSIGN  shift 19
	'('  shift 20
	';'  shift 21
	.  error

	ini  goto 22


state 19
	ini : ASSIGN . INT  (23)
	ini : ASSIGN . '-' INT  (24)
	ini : ASSIGN . const STR  (25)
	ini : ASSIGN . REAL  (26)
	ini : ASSIGN . '-' REAL  (27)
	ini : ASSIGN . ID  (28)
	const : .  (15)

	INT  shift 23
	REAL  shift 24
	ID  shift 25
	CONST  shift 9
	'-'  shift 26
	STR  reduce 15

	const  goto 27


state 20
	declaracao : pub const type ptr ID '(' . params ')' bodys ';'  (7)
	declaracao : pub const type ptr ID '(' . ')' body ';'  (8)
	declaracao : pub const type ptr ID '(' . ')' ';'  (9)

	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	')'  shift 28
	.  error

	type  goto 29
	param  goto 30
	params  goto 31


state 21
	declaracao : pub const type ptr ID ';' .  (5)

	.  reduce 5


state 22
	declaracao : pub const type ptr ID ini . ';'  (6)

	';'  shift 32
	.  error


state 23
	ini : ASSIGN INT .  (23)

	.  reduce 23


state 24
	ini : ASSIGN REAL .  (26)

	.  reduce 26


state 25
	ini : ASSIGN ID .  (28)

	.  reduce 28


state 26
	ini : ASSIGN '-' . INT  (24)
	ini : ASSIGN '-' . REAL  (27)

	INT  shift 33
	REAL  shift 34
	.  error


state 27
	ini : ASSIGN const . STR  (25)

	STR  shift 35
	.  error


state 28
	declaracao : pub const type ptr ID '(' ')' . body ';'  (8)
	declaracao : pub const type ptr ID '(' ')' . ';'  (9)

	';'  shift 36
	'{'  shift 37
	.  error

	body  goto 38


state 29
	param : type . ptr ID  (31)
	ptr : .  (13)

	'*'  shift 16
	ID  reduce 13

	ptr  goto 39


state 30
	params : param .  (30)

	.  reduce 30


state 31
	declaracao : pub const type ptr ID '(' params . ')' bodys ';'  (7)
	params : params . ',' param  (29)

	')'  shift 40
	','  shift 41
	.  error


state 32
	declaracao : pub const type ptr ID ini ';' .  (6)

	.  reduce 6


state 33
	ini : ASSIGN '-' INT .  (24)

	.  reduce 24


state 34
	ini : ASSIGN '-' REAL .  (27)

	.  reduce 27


state 35
	ini : ASSIGN const STR .  (25)

	.  reduce 25


state 36
	declaracao : pub const type ptr ID '(' ')' ';' .  (9)

	.  reduce 9


state 37
	body : '{' . '}'  (34)
	body : '{' . args '}'  (35)
	body : '{' . instrs '}'  (36)
	body : '{' . args instrs '}'  (37)

	error  shift 42
	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	DO  shift 47
	IF  shift 48
	FOR  shift 49
	BREAK  shift 50
	CONTINUE  shift 51
	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	'{'  shift 37
	'}'  shift 56
	.  error

	leftvalue  goto 57
	expr  goto 58
	body  goto 59
	instr  goto 60
	instrs  goto 61
	args  goto 62
	type  goto 29
	param  goto 63


state 38
	declaracao : pub const type ptr ID '(' ')' body . ';'  (8)

	';'  shift 64
	.  error


state 39
	param : type ptr . ID  (31)

	ID  shift 65
	.  error


state 40
	declaracao : pub const type ptr ID '(' params ')' . bodys ';'  (7)
	bodys : .  (11)

	'{'  shift 37
	';'  reduce 11

	body  goto 66
	bodys  goto 67


state 41
	params : params ',' . param  (29)

	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	.  error

	type  goto 29
	param  goto 68


state 42
	instr : error . ';'  (51)

	';'  shift 69
	.  error


state 43
	expr : INT .  (58)

	.  reduce 58


state 44
	expr : REAL .  (59)

	.  reduce 59


state 45
	expr : ID . '(' exprs ')'  (62)
	expr : ID . '(' ')'  (63)
	leftvalue : ID .  (85)
	leftvalue : ID . '[' expr ']'  (86)

	'('  shift 70
	'['  shift 71
	DO  reduce 85
	THEN  reduce 85
	UPTO  reduce 85
	DOWNTO  reduce 85
	STEP  reduce 85
	ASSIGN  reduce 85
	NE  reduce 85
	GE  reduce 85
	LE  reduce 85
	EQ  reduce 85
	INC  reduce 85
	DEC  reduce 85
	'|'  reduce 85
	'&'  reduce 85
	'>'  reduce 85
	'<'  reduce 85
	'+'  reduce 85
	'-'  reduce 85
	'*'  reduce 85
	'/'  reduce 85
	'%'  reduce 85
	'!'  reduce 85
	')'  reduce 85
	']'  reduce 85
	';'  reduce 85
	','  reduce 85
	'#'  reduce 85


state 46
	expr : STR .  (60)

	.  reduce 60


state 47
	instr : DO . instr WHILE expr ';'  (42)

	error  shift 42
	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	DO  shift 47
	IF  shift 48
	FOR  shift 49
	BREAK  shift 50
	CONTINUE  shift 51
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	'{'  shift 37
	.  error

	leftvalue  goto 57
	expr  goto 58
	body  goto 59
	instr  goto 72


state 48
	instr : IF . expr THEN instr  (40)
	instr : IF . expr THEN instr ELSE instr  (41)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 74


state 49
	instr : FOR . leftvalue IN expr updw expr step DO instr  (43)

	ID  shift 75
	.  error

	leftvalue  goto 76


state 50
	instr : BREAK . INT ';'  (46)
	instr : BREAK . ';'  (48)

	INT  shift 77
	';'  shift 78
	.  error


state 51
	instr : CONTINUE . INT ';'  (47)
	instr : CONTINUE . ';'  (49)

	INT  shift 79
	';'  shift 80
	.  error


state 52
	expr : INC . leftvalue  (67)

	ID  shift 75
	.  error

	leftvalue  goto 81


state 53
	expr : DEC . leftvalue  (66)

	ID  shift 75
	.  error

	leftvalue  goto 82


state 54
	expr : '-' . expr  (84)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 83


state 55
	expr : '(' . expr ')'  (64)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 84


state 56
	body : '{' '}' .  (34)

	.  reduce 34


state 57
	instr : leftvalue . '#' expr ';'  (50)
	expr : leftvalue .  (61)
	expr : leftvalue . ASSIGN expr  (65)
	expr : leftvalue . INC  (68)
	expr : leftvalue . DEC  (69)

	ASSIGN  shift 85
	INC  shift 86
	DEC  shift 87
	'#'  shift 88
	NE  reduce 61
	GE  reduce 61
	LE  reduce 61
	EQ  reduce 61
	'|'  reduce 61
	'&'  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'%'  reduce 61
	'!'  reduce 61
	';'  reduce 61


state 58
	instr : expr . ';'  (44)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '+' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . EQ expr  (75)
	expr : expr . NE expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . LE expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . '<' expr  (80)
	expr : expr . '&' expr  (81)
	expr : expr . '|' expr  (82)
	expr : expr . '!'  (83)

	NE  shift 89
	GE  shift 90
	LE  shift 91
	EQ  shift 92
	'|'  shift 93
	'&'  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'!'  shift 102
	';'  shift 103
	.  error


state 59
	instr : body .  (45)

	.  reduce 45


state 60
	instrs : instr .  (38)

	.  reduce 38


state 61
	body : '{' instrs . '}'  (36)
	instrs : instrs . instr  (39)

	error  shift 42
	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	DO  shift 47
	IF  shift 48
	FOR  shift 49
	BREAK  shift 50
	CONTINUE  shift 51
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	'{'  shift 37
	'}'  shift 104
	.  error

	leftvalue  goto 57
	expr  goto 58
	body  goto 59
	instr  goto 105


state 62
	args : args . param ';'  (33)
	body : '{' args . '}'  (35)
	body : '{' args . instrs '}'  (37)

	error  shift 42
	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	DO  shift 47
	IF  shift 48
	FOR  shift 49
	BREAK  shift 50
	CONTINUE  shift 51
	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	'{'  shift 37
	'}'  shift 106
	.  error

	leftvalue  goto 57
	expr  goto 58
	body  goto 59
	instr  goto 60
	instrs  goto 107
	type  goto 29
	param  goto 108


state 63
	args : param . ';'  (32)

	';'  shift 109
	.  error


state 64
	declaracao : pub const type ptr ID '(' ')' body ';' .  (8)

	.  reduce 8


state 65
	param : type ptr ID .  (31)

	.  reduce 31


state 66
	bodys : body .  (12)

	.  reduce 12


state 67
	declaracao : pub const type ptr ID '(' params ')' bodys . ';'  (7)

	';'  shift 110
	.  error


state 68
	params : params ',' param .  (29)

	.  reduce 29


state 69
	instr : error ';' .  (51)

	.  reduce 51


state 70
	expr : ID '(' . exprs ')'  (62)
	expr : ID '(' . ')'  (63)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	')'  shift 111
	.  error

	leftvalue  goto 73
	expr  goto 112
	exprs  goto 113


state 71
	leftvalue : ID '[' . expr ']'  (86)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 114


state 72
	instr : DO instr . WHILE expr ';'  (42)

	WHILE  shift 115
	.  error


state 73
	expr : leftvalue .  (61)
	expr : leftvalue . ASSIGN expr  (65)
	expr : leftvalue . INC  (68)
	expr : leftvalue . DEC  (69)

	ASSIGN  shift 85
	INC  shift 86
	DEC  shift 87
	DO  reduce 61
	THEN  reduce 61
	UPTO  reduce 61
	DOWNTO  reduce 61
	STEP  reduce 61
	NE  reduce 61
	GE  reduce 61
	LE  reduce 61
	EQ  reduce 61
	'|'  reduce 61
	'&'  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'%'  reduce 61
	'!'  reduce 61
	')'  reduce 61
	']'  reduce 61
	';'  reduce 61
	','  reduce 61


state 74
	instr : IF expr . THEN instr  (40)
	instr : IF expr . THEN instr ELSE instr  (41)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '+' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . EQ expr  (75)
	expr : expr . NE expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . LE expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . '<' expr  (80)
	expr : expr . '&' expr  (81)
	expr : expr . '|' expr  (82)
	expr : expr . '!'  (83)

	THEN  shift 116
	NE  shift 89
	GE  shift 90
	LE  shift 91
	EQ  shift 92
	'|'  shift 93
	'&'  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'!'  shift 102
	.  error


state 75
	leftvalue : ID .  (85)
	leftvalue : ID . '[' expr ']'  (86)

	'['  shift 71
	DO  reduce 85
	THEN  reduce 85
	IN  reduce 85
	UPTO  reduce 85
	DOWNTO  reduce 85
	STEP  reduce 85
	NE  reduce 85
	GE  reduce 85
	LE  reduce 85
	EQ  reduce 85
	'|'  reduce 85
	'&'  reduce 85
	'>'  reduce 85
	'<'  reduce 85
	'+'  reduce 85
	'-'  reduce 85
	'*'  reduce 85
	'/'  reduce 85
	'%'  reduce 85
	'!'  reduce 85
	')'  reduce 85
	']'  reduce 85
	';'  reduce 85
	','  reduce 85


state 76
	instr : FOR leftvalue . IN expr updw expr step DO instr  (43)

	IN  shift 117
	.  error


state 77
	instr : BREAK INT . ';'  (46)

	';'  shift 118
	.  error


state 78
	instr : BREAK ';' .  (48)

	.  reduce 48


state 79
	instr : CONTINUE INT . ';'  (47)

	';'  shift 119
	.  error


state 80
	instr : CONTINUE ';' .  (49)

	.  reduce 49


state 81
	expr : INC leftvalue .  (67)

	.  reduce 67


state 82
	expr : DEC leftvalue .  (66)

	.  reduce 66


state 83
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '+' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . EQ expr  (75)
	expr : expr . NE expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . LE expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . '<' expr  (80)
	expr : expr . '&' expr  (81)
	expr : expr . '|' expr  (82)
	expr : expr . '!'  (83)
	expr : '-' expr .  (84)

	.  reduce 84


state 84
	expr : '(' expr . ')'  (64)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '+' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . EQ expr  (75)
	expr : expr . NE expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . LE expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . '<' expr  (80)
	expr : expr . '&' expr  (81)
	expr : expr . '|' expr  (82)
	expr : expr . '!'  (83)

	NE  shift 89
	GE  shift 90
	LE  shift 91
	EQ  shift 92
	'|'  shift 93
	'&'  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'!'  shift 102
	')'  shift 120
	.  error


state 85
	expr : leftvalue ASSIGN . expr  (65)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 121


state 86
	expr : leftvalue INC .  (68)

	.  reduce 68


state 87
	expr : leftvalue DEC .  (69)

	.  reduce 69


state 88
	instr : leftvalue '#' . expr ';'  (50)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 122


state 89
	expr : expr NE . expr  (76)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 123


state 90
	expr : expr GE . expr  (77)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 124


state 91
	expr : expr LE . expr  (78)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 125


state 92
	expr : expr EQ . expr  (75)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 126


state 93
	expr : expr '|' . expr  (82)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 127


state 94
	expr : expr '&' . expr  (81)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 128


state 95
	expr : expr '>' . expr  (79)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 129


state 96
	expr : expr '<' . expr  (80)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 130


state 97
	expr : expr '+' . expr  (73)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 131


state 98
	expr : expr '-' . expr  (74)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 132


state 99
	expr : expr '*' . expr  (70)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 133


state 100
	expr : expr '/' . expr  (71)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 134


state 101
	expr : expr '%' . expr  (72)

	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	.  error

	leftvalue  goto 73
	expr  goto 135


state 102
	expr : expr '!' .  (83)

	.  reduce 83


state 103
	instr : expr ';' .  (44)

	.  reduce 44


state 104
	body : '{' instrs '}' .  (36)

	.  reduce 36


state 105
	instrs : instrs instr .  (39)

	.  reduce 39


state 106
	body : '{' args '}' .  (35)

	.  reduce 35


state 107
	body : '{' args instrs . '}'  (37)
	instrs : instrs . instr  (39)

	error  shift 42
	INT  shift 43
	REAL  shift 44
	ID  shift 45
	STR  shift 46
	DO  shift 47
	IF  shift 48
	FOR  shift 49
	BREAK  shift 50
	CONTINUE  shift 51
	INC  shift 52
	DEC  shift 53
	'-'  shift 54
	'('  shift 55
	'{'  shift 37
	'}'  shift 136
	.  error

	leftvalue  goto 57
	expr  goto 58
	body  goto 59
	instr  goto 105


state 108
	args : args param . ';'  (33)

	';'  shift 137
	.  error


state 109
	args : param ';' .  (32)

	.  reduce 32


state 110
	declaracao : pub const type ptr ID '(' params ')' bodys ';' .  (7)

	.  reduce 7


state 111
	expr : ID '(' ')' .  (63)

	.  reduce 63


state 112
	exprs : expr .  (57)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '+' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . EQ expr  (75)
	expr : expr . NE expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . LE expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . '<' expr  (80)
	expr : expr . '&' expr  (81)
	expr : expr . '|' expr  (82)
	expr : expr . '!'  (83)

	NE  shift 89
	GE  shift 90
	LE  shift 91
	EQ  shift 92
	'|'  shift 93
	'&'  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'!'  shift 102
	')'  reduce 57
	','  reduce 57


state 113
	exprs : exprs . ',' expr  (56)
	expr : ID '(' exprs . ')'  (62)

	')'  shift 138
	','  shift 139
	.  error


state 114
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '+' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . EQ expr  (75)
	expr : expr . NE expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . LE expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . '<' expr  (80)
	expr : expr . '&' expr  (81)
	expr : expr . '|' expr  (82)
	expr : expr . '!'  (83)
	leftvalue : ID '[' expr . ']'  (86)
